Java Version fix